# rosCLIPS64

./: .gitignore  CMakeLists.txt  LICENSE  cubes.clp  package.xml  readme.MD
include/: .gitignore
lib/: .gitignore
msg/: .gitignore
src/: .gitignore  CLIPSCore.cpp  CLIPSCore.h  console.cpp  node.cpp
srv/: .gitignore
